# plant-scraper

./: .gitignore  README.md  config.py  pyproject.toml
app/: rag_chain.py  server.py
client/: package-lock.json
scraper/: scrape_and_process.py  urls.py
